@@ -67,6 +67,7 @@ void bind_peer_info()
         .def_readonly("upload_limit", &peer_info::upload_limit)
         .def_readonly("download_limit", &peer_info::download_limit)
         .def_readonly("load_balancing", &peer_info::load_balancing)
+        .def_readonly("remote_dl_rate", &peer_info::remote_dl_rate)
 #endif
         .add_property("last_request", get_last_request)
         .add_property("last_active", get_last_active)
@@ -87,7 +88,6 @@ void bind_peer_info()
         .def_readonly("downloading_total", &peer_info::downloading_total)
         .def_readonly("client", &peer_info::client)
         .def_readonly("connection_type", &peer_info::connection_type)
-        .def_readonly("remote_dl_rate", &peer_info::remote_dl_rate)
         .def_readonly("pending_disk_bytes", &peer_info::pending_disk_bytes)
         .def_readonly("send_quota", &peer_info::send_quota)
         .def_readonly("receive_quota", &peer_info::receive_quota)
